--- a/DinnerWebsite.Infrastructure/DinnerWebsite.Infrastructure.csproj
+++ b/DinnerWebsite.Infrastructure/DinnerWebsite.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DinnerWebsite.Application\DinnerWebsite.Application.csproj" />
   </ItemGroup>
 
